# ramp-maker

./: Cargo.toml
src/: flat.rs  trapezoidal.rs
src/util/: traits.rs
