[package]
name    = "ramp-maker"
version = "0.2.0"
authors = ["Hanno Braun <hanno@braun-embedded.com>"]
edition = "2018"

description = "Stepper Acceleration Ramp Generator"
homepage    = "https://flott-motion.org/"
repository  = "https://github.com/flott-motion/ramp-maker"
license     = "0BSD"
keywords    = ["stepper", "motor", "acceleration", "ramp", "profile"]
categories  = ["embedded", "no-std", "science::robotics"]


[features]
std = [] # standard library support


[dependencies]
az         = "1"
fixed-sqrt = "0"
typenum    = "1"

[dependencies.fixed]
version  = "1"
features = ["az", "num-traits"]

[dependencies.libm]
version  = "0"
optional = true

[dependencies.num-traits]
version          = "0"
default-features = false


[dev-dependencies]
approx = "0"


[[example]]
name              = "basic"
required-features = ["std"]
